--- a/index.html
+++ b/index.html
@@ -11,8 +11,65 @@
     <link rel="icon" type="images/icon" href="./assets/images/favicon.ico">
     <title>Home</title>
 </head>
+
 <body>
-    
+    <!-- Header Start -->
+    <header class="site-header">
+        <div class="container">
+            <nav class="desktop-menu">
+                <div class="logo">
+                    <a href="./">
+                        <img src="./assets/images/logo.svg" alt="logo"></a>
+                </div>
+                <div class="main-navbar">
+                    <ul>
+                        <li><a class="active" href="./">Home</a></li>
+                        <li><a href="tournaments-events">Tournaments and Events</a></li>
+                        <li><a href="membership-information">Membership Information</a></li>
+                        <li><a href="about-us">About Us</a></li>
+                        <li><a class="desktop-hide contact-us-btn butn" href="contact-us">Contact Us</a></li>
+                    </ul>
+                    <div class="close-icon"><i class="fa-solid fa-x"></i></div>
+                </div>
+                <div class="how-play">
+                    <ul>
+                        <li><a class="mobile-hide contact-us-btn butn" href="contact-us">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
+            </nav>
+        </div>
+    </header>
+    <!-- Header End -->
+
+    <!--Home Page Banner Section  Start -->
+    <section class="banner">
+        <div class="banner-image">
+            <img src="./assets/images/home-banner-image.png" alt="image">
+        </div>
+        <div class="banner-text text-center">
+            <div class="banner-text-group">
+                <h1>Q-Snooker</h1>
+                <h3>Your Premier Snooker Destination</h3>
+            </div>
+        </div>
+    </section>
+    <!-- Home Page Banner Section  End-->
+
+
+    <!-- Home Page Intro Section Start -->
+    <div class="pages-intro-text-section py-5">
+        <div class="container">
+            <div class="pages-intro-text-wrapper text-center">
+                <p>
+                    Lag ditt drømmefotballag, konkurrer mot venner og test ferdighetene dine mot andre fans.
+                    Velg spillere fra de beste ligaene og se hvordan valgene dine presterer i ekte kamper. Klar til
+                    å vise frem fantasifotballferdighetene dine? Kom i gang og bygg teamet ditt nå!
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- Home Page Intro  Section End-->
 
 
 
