--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="how-play">
                     <ul>
-                        <li><a class="mobile-hide contact-us-btn butn" href="contact-us">Contact Us</a></li>
+                        <li><a class="mobile-hide contact-us-btn butn" href="contact-us"><i class="fa-solid fa-phone phone"></i>Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
@@ -45,7 +45,7 @@
     <!--Home Page Banner Section  Start -->
     <section class="banner">
         <div class="banner-image">
-            <img src="./assets/images/home-banner-image.png" alt="image">
+            <img src="./assets/images/home-banner-image.jpg" alt="image">
         </div>
         <div class="banner-text text-center">
             <div class="banner-text-group">
@@ -62,9 +62,11 @@
         <div class="container">
             <div class="pages-intro-text-wrapper text-center">
                 <p>
-                    Lag ditt drømmefotballag, konkurrer mot venner og test ferdighetene dine mot andre fans.
-                    Velg spillere fra de beste ligaene og se hvordan valgene dine presterer i ekte kamper. Klar til
-                    å vise frem fantasifotballferdighetene dine? Kom i gang og bygg teamet ditt nå!
+                    At Q-Snooker, we combine classic elements with a contemporary twist to deliver an
+                    outstanding snooker experience. If you have years of experience or are just starting out, our
+                    modern facilities and friendly environment make us the top choice for those who love
+                    snooker. Check out our top-of-the range tables, dive into thrilling tournaments, and engage
+                    with an energetic community of players.                    
                 </p>
             </div>
         </div>
