--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 </div>
                 <div class="how-play">
                     <ul>
-                        <li><a class="mobile-hide contact-us-btn butn" href="contact-us"><i class="fa-solid fa-phone phone"></i>Contact Us</a></li>
+                        <li><a class="mobile-hide contact-us-btn butn" href="contact-us"><i
+                                    class="fa-solid fa-phone phone"></i>Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="menu-icon"><i class="fa-solid fa-bars"></i></div>
@@ -66,15 +67,52 @@
                     outstanding snooker experience. If you have years of experience or are just starting out, our
                     modern facilities and friendly environment make us the top choice for those who love
                     snooker. Check out our top-of-the range tables, dive into thrilling tournaments, and engage
-                    with an energetic community of players.                    
+                    with an energetic community of players.
                 </p>
             </div>
         </div>
     </div>
     <!-- Home Page Intro  Section End-->
 
+    <!-- Home Page Sign Up Form Section  Start -->
+    <section class="home-page-signup-section py-5">
+        <div class="container">
+            <div class="home-signup-wrapper">
+                <h3>
+                    Join us and find out why Q-Snooker is not just a venue for games.
+                    It is a community where you can thrive.
+                </h3>
+                <div class="form-section">
+                    <div class="form-image">
+                        <img src="./assets/images/home-signup-image.jpg" alt="image">
+                    </div>
+                    <div class="form-container" id="login-form">
+                        <h2>Login</h2>
+                        <form>
+                            <input type="text" id="username" name="username" placeholder="Enter Your Email" required>
+                            <input type="password" id="password" name="password" placeholder="Enter Your Password"
+                                required>
+                            <button type="submit">Login</button>
+                        </form>
+                        <p>Don't have an account? <a href="#" id="signup-link">Sign up</a></p>
+                    </div>
 
+                    <div class="form-container" id="signup-form" style="display: none;">
+                        <h2>Sign Up</h2>
+                        <form>
+                            <input type="text" id="new-username" name="new-username" placeholder="Enter Your Name" required>
+                            <input type="email" id="new-email" name="new-email" placeholder="Enter Your Email" required>
+                            <input type="password" id="new-password" name="new-password"  placeholder="Choose Password" required>
+                            <button type="submit">Sign Up</button>
+                        </form>
+                        <p>Already have an account? <a href="#" id="login-link">Login</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <!-- Home Page Sign Up Form Section  Start -->
 
 
 
