--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section class="home-page-signup-section py-5">
         <div class="container">
             <div class="home-signup-wrapper">
-                <h3>
+                <h3 class="text-center pb-5">
                     Join us and find out why Q-Snooker is not just a venue for games.
                     It is a community where you can thrive.
                 </h3>
@@ -111,7 +111,6 @@
             </div>
         </div>
     </section>
-
     <!-- Home Page Sign Up Form Section  Start -->
 
 
