--- a/index.html
+++ b/index.html
@@ -100,9 +100,11 @@
                     <div class="form-container" id="signup-form" style="display: none;">
                         <h2>Sign Up</h2>
                         <form>
-                            <input type="text" id="new-username" name="new-username" placeholder="Enter Your Name" required>
+                            <input type="text" id="new-username" name="new-username" placeholder="Enter Your Name"
+                                required>
                             <input type="email" id="new-email" name="new-email" placeholder="Enter Your Email" required>
-                            <input type="password" id="new-password" name="new-password"  placeholder="Choose Password" required>
+                            <input type="password" id="new-password" name="new-password" placeholder="Choose Password"
+                                required>
                             <button type="submit">Sign Up</button>
                         </form>
                         <p>Already have an account? <a href="#" id="login-link">Login</a></p>
@@ -113,8 +115,51 @@
     </section>
     <!-- Home Page Sign Up Form Section  Start -->
 
+    <!-- Home Page Featured Section Start  -->
+    <section class="home-featured-cards-section py-5">
+        <div class="container">
+            <h2 class="section-heading pb-5">Featured Competitions</h2>
+            <div class="home-featured-cards-wrapper">          
+
+                <div class="home-featured-cards text-center">
+                    <div class="home-featured-image">
+                        <img src="./assets/images/home-banner-image.jpg" alt="featured-image">
+                    </div>
+                    <div class="home-featured-text">
+                        <a href="tournaments-events.html">
+                            <h3>Seniors Open</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="home-featured-cards">
+                    <div class="home-featured-image">
+                        <img src="./assets/images/home-banner-image.jpg" alt="featured-image">
+                    </div>
+                    <div class="home-featured-text text-center">
+                        <a href="tournaments-events.html">
+                            <h3>Mid Amateur Championships</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="home-featured-cards text-center">
+                    <div class="home-featured-image">
+                        <img src="./assets/images/home-banner-image.jpg" alt="featured-image">
+                    </div>
+                    <div class="home-featured-text">
+                        <a href="tournaments-events.html">
+                            <h3 >U-18 District League</h3>
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 
+    <!-- Home Page Featured Section End  -->
 
     <script src="assets/js/aos.js"></script>
     <script src="./assets/js/index.js"></script>
