--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section class="home-featured-cards-section py-5">
         <div class="container">
             <h2 class="section-heading pb-5">Featured Competitions</h2>
-            <div class="home-featured-cards-wrapper">          
+            <div class="home-featured-cards-wrapper">
 
                 <div class="home-featured-cards text-center">
                     <div class="home-featured-image">
@@ -149,7 +149,7 @@
                     </div>
                     <div class="home-featured-text">
                         <a href="tournaments-events.html">
-                            <h3 >U-18 District League</h3>
+                            <h3>U-18 District League</h3>
                         </a>
                     </div>
                 </div>
@@ -157,9 +157,119 @@
             </div>
         </div>
     </section>
-
-
     <!-- Home Page Featured Section End  -->
+
+    <!-- Home Page Advantage Section Start  -->
+    <section class="home-advantage-section">
+        <div class="container">
+            <h2 class="section-heading pb-5">Advantages of Membership</h2>
+            <div class="home-advantage-cards-wrapper">
+                <div class="home-advantage-cards-wrapper pt-5">
+
+                    <div class="home-advantage-cards text-center">
+                        <div class="home-advantage-icons">
+                            <img src="./assets/images/access.png" alt="icons">
+                        </div>
+                        <div class="home-advantage-content">
+                            <h3>
+                                Access to our Booking App
+                            </h3>
+                        </div>
+                        <div class="target-page">
+                            <a href="membership-information">
+                                <img src="./assets/images/next-page.png" class="next-page-image" alt="arrow-next">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="home-advantage-cards text-center">
+                        <div class="home-advantage-icons">
+                            <img src="./assets/images/price.png" alt="icons">
+                        </div>
+                        <div class="home-advantage-content">
+                            <h3>
+                                Reduced Price Tables
+                            </h3>
+                        </div>
+                        <div class="target-page">
+                            <a href="membership-information">
+                                <img src="./assets/images/next-page.png" class="next-page-image" alt="arrow-next">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="home-advantage-cards text-center">
+                        <div class="home-advantage-icons">
+                            <img src="./assets/images/fees.png" alt="icons">
+                        </div>
+                        <div class="home-advantage-content">
+                            <h3>
+                                Reduced competition fees
+                            </h3>
+                        </div>
+                        <div class="target-page">
+                            <a href="membership-information">
+                                <img src="./assets/images/next-page.png" class="next-page-image" alt="arrow-next">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="home-advantage-cards text-center">
+                        <div class="home-advantage-icons">
+                            <img src="./assets/images/membership.png" alt="icons">
+                        </div>
+                        <div class="home-advantage-content">
+                            <h3>
+                                Membership in the National
+                                Association
+                            </h3>
+                        </div>
+                        <div class="target-page">
+                            <a href="membership-information">
+                                <img src="./assets/images/next-page.png" class="next-page-image" alt="arrow-next">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="home-advantage-cards text-center">
+                        <div class="home-advantage-icons">
+                            <img src="./assets/images/access-control.png" alt="icons">
+                        </div>
+                        <div class="home-advantage-content">
+                            <h3>
+                                Access to club lounge
+                            </h3>
+                        </div>
+                        <div class="target-page">
+                            <a href="membership-information">
+                                <img src="./assets/images/next-page.png" class="next-page-image" alt="arrow-next">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="home-advantage-cards text-center">
+                        <div class="home-advantage-icons">
+                            <img src="./assets/images/booking.png" alt="icons">
+                        </div>
+                        <div class="home-advantage-content">
+                            <h3>
+                                Priority Booking
+                            </h3>
+                        </div>
+                        <div class="target-page">
+                            <a href="membership-information">
+                                <img src="./assets/images/next-page.png" class="next-page-image" alt="arrow-next">
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Home Page Advantage Section End  -->
+
 
     <script src="assets/js/aos.js"></script>
     <script src="./assets/js/index.js"></script>
