--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="container">
             <h2 class="section-heading pb-5">Advantages of Membership</h2>
             <div class="home-advantage-cards-wrapper">
-                <div class="home-advantage-cards-wrapper pt-5">
+                <div class="home-advantage-cards-wrapper">
 
                     <div class="home-advantage-cards text-center">
                         <div class="home-advantage-icons">
@@ -270,6 +270,10 @@
 
     <!-- Home Page Advantage Section End  -->
 
+    <!-- Home Page Snooker Images Gallery Section Start -->
+ div.
+
+    <!-- Home Page Snooker Images Gallery Section End-->
 
     <script src="assets/js/aos.js"></script>
     <script src="./assets/js/index.js"></script>
