--- a/index.html
+++ b/index.html
@@ -271,8 +271,30 @@
     <!-- Home Page Advantage Section End  -->
 
     <!-- Home Page Snooker Images Gallery Section Start -->
- div.
-
+    <div class="home-images-gallery-section py-5">
+        <div class="container">
+            <div class="home-images-gallery-wrapper">
+                <div class="home-gallery-images">
+                    <img src="./assets/images/gallery-image1.jpg" alt="image">
+                </div>
+                <div class="home-gallery-images">
+                    <img src="./assets/images/gallery-image2.jpg" alt="image">
+                </div>
+                <div class="home-gallery-images">
+                           <img src="./assets/images/gallery-image3.jpg" alt="image">
+                </div>
+                <div class="home-gallery-images">
+                           <img src="./assets/images/home-banner-image.jpg" alt="image">
+                </div>
+                <div class="home-gallery-images">
+                           <img src="./assets/images/home-banner-image.jpg" alt="image">
+                </div>
+                <div class="home-gallery-images">
+                           <img src="./assets/images/home-banner-image.jpg" alt="image">
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Home Page Snooker Images Gallery Section End-->
 
     <script src="assets/js/aos.js"></script>
