--- a/index.html
+++ b/index.html
@@ -419,9 +419,10 @@
                     <div class="footer-links footer-items">
                         <h3>Links</h3>
                         <ul>
-                            <li><a href="./">Home</a></li>
-                            <li><a href="mailto:info@yurpiks.com">Contact Us</a></li>
+                            <li><a href="./">Home</a></li>      
                             <li><a href="privacy-policy">Privacy Policy</a></li>
+                            <li><a href="personal-information">Personal information Policy</a></li>
+                            <li><a href="return-refunds">Refunds and Returns Policy</a></li>
                             <li><a href="terms-conditions">Terms & Conditions</a></li>
                         </ul>
                     </div>
