--- a/about-us.html
+++ b/about-us.html
@@ -110,7 +110,7 @@
                         Our club features state-of-the-art snooker tables and comfortable lounge areas, designed to
                         enhance your playing experience. From casual games to competitive tournaments, we
                         provide the perfect setting for all your snooker needs. We also offer access to our exclusive
-                        club lounge and a range of amenities to ensure your time with us is enjoyable.                        
+                        club lounge and a range of amenities to ensure your time with us is enjoyable.
                     </p>
                 </div>
 
@@ -133,16 +133,17 @@
                         We invite you to become part of our story. Whether you’re looking to join a tournament, enjoy
                         a casual game, or simply connect with fellow snooker enthusiasts, Q-Snooker is the place
                         for you. Come and experience the warmth and camaraderie that have defined our club for
-                        years.                        
+                        years.
                     </p>
                     <p>
                         Thank you for being a part of our journey. We look forward to welcoming you to Q-Snooker!
                     </p>
                     <p>
-                        For more information or to get in touch with us, please email <a href="mailto:info@q-snooker.com">info@q-snooker.com</a>
+                        For more information or to get in touch with us, please email <a
+                            href="mailto:info@q-snooker.com">info@q-snooker.com</a>
                     </p>
                 </div>
-                
+
             </div>
         </div>
     </section>
@@ -183,10 +184,10 @@
                     <h3>Links</h3>
                     <ul>
                         <li><a href="./">Home</a></li>
-                        <li><a href="privacy-policy">Privacy Policy</a></li>
-                        <li><a href="personal-information">Personal information Policy</a></li>
-                        <li><a href="return-refunds">Refunds and Returns Policy</a></li>
-                        <li><a href="terms-conditions">Terms & Conditions</a></li>
+                        <li><a href="privacy-policy"><i class="fa-solid fa-angles-right footer-arrow"></i>Privacy Policy</a></li>
+                        <li><a href="personal-information"><i class="fa-solid fa-angles-right footer-arrow"></i>Personal Information Policy</a></li>
+                        <li><a href="return-refunds"><i class="fa-solid fa-angles-right footer-arrow"></i>Refunds and Returns Policy</a></li>
+                        <li><a href="terms-conditions"><i class="fa-solid fa-angles-right footer-arrow"></i>Terms & Conditions</a></li>
                     </ul>
                 </div>
             </div>
