--- a/index.html
+++ b/index.html
@@ -419,11 +419,11 @@
                     <div class="footer-links footer-items">
                         <h3>Links</h3>
                         <ul>
-                            <li><a href="./">Home</a></li>      
-                            <li><a href="privacy-policy">Privacy Policy</a></li>
-                            <li><a href="personal-information">Personal information Policy</a></li>
-                            <li><a href="return-refunds">Refunds and Returns Policy</a></li>
-                            <li><a href="terms-conditions">Terms & Conditions</a></li>
+                            <li><a href="./">Home</a></li>
+                            <li><a href="privacy-policy"><i class="fa-solid fa-angles-right footer-arrow"></i>Privacy Policy</a></li>
+                            <li><a href="personal-information"><i class="fa-solid fa-angles-right footer-arrow"></i>Personal information Policy</a></li>
+                            <li><a href="return-refunds"><i class="fa-solid fa-angles-right footer-arrow"></i>Refunds and Returns Policy</a></li>
+                            <li><a href="terms-conditions"><i class="fa-solid fa-angles-right footer-arrow"></i>Terms & Conditions</a></li>
                         </ul>
                     </div>
                 </div>
