--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -65,7 +65,7 @@
             <div class="pages-intro-text-wrapper text-center">
                 <p>
                     This Privacy Policy describes the policies of Q Snooker, 2355 Mansfield Dr, British Columbia BC
-                    V9N 2M2, Canada, email: info@q-snooker, phone: 08712345610 on the collection, use and
+                    V9N 2M2, Canada, email: <a href="mailto:info@q-snooker">info@q-snooker</a> , phone: 08712345610 on the collection, use and
                     disclosure of your information that we collect when you use our website (
                     http://www.q-snooker.com ). (the “Service”). By accessing or using the Service, you are
                     consenting to the collection, use and disclosure of your information in accordance with this
@@ -120,52 +120,57 @@
                     </h3>
 
                     <p>
-                        At Q-Snooker, our mission is to create a friendly and supportive environment where snooker
-                        players can thrive. If you’re a seasoned pro or a newcomer to the game, we strive to offer
-                        top-notch facilities, engaging events, and a strong sense of community.
+                        Depending on the law that applies, you may have a right to access and rectify or erase
+                        your personal data or receive a copy of your personal data, restrict or object to the active
+                        processing of your data, ask us to share (port) your personal information to another
+                        entity, withdraw any consent you provided to us to process your data, a right to lodge a
+                        complaint with a statutory authority and such other rights as may be relevant under
+                        applicable laws. To exercise these rights, you can write to us at <a href="mailto:james@amarachinvestments.com">james@amarachinvestments.com.</a>
+                         We will respond to your request in accordance with
+                        applicable law.
+                    </p>
+                    <p>
+                        You may opt-out of direct marketing communications or the profiling we carry out for
+                        marketing purposes by writing to us at <a href="mailto:james@amarachinvestments.com">james@amarachinvestments.com.</a>
+                        Do note that if you do not allow us to collect or process the required personal information
+                        or withdraw the consent to process the same for the required purposes, you may not be
+                        able to access or use the services for which your information was sought.
                     </p>
                 </div>
 
                 <div class="sub-pages-group">
                     <h3>
-                        Our Facilities
+                        Cookies Etc.
                     </h3>
                     <p>
-                        Our club features state-of-the-art snooker tables and comfortable lounge areas, designed to
-                        enhance your playing experience. From casual games to competitive tournaments, we
-                        provide the perfect setting for all your snooker needs. We also offer access to our exclusive
-                        club lounge and a range of amenities to ensure your time with us is enjoyable.
+                        To learn more about how we use these and your choices in relation to these tracking
+                        technologies, please refer to our Cookie Policy.                        
                     </p>
                 </div>
 
                 <div class="sub-pages-group">
                     <h3>
-                        Community and Tradition
+                        Security:
                     </h3>
                     <p>
-                        As a family-owned business, we value the close-knit relationships we’ve built with our
-                        members and the broader community. We’re proud to support local events and initiatives,
-                        and our long-standing presence on Vancouver Island reflects our commitment to giving back.
+                        The security of your information is important to us and we will use reasonable security
+                        measures to prevent the loss, misuse or unauthorized alteration of your information
+                        under our control. However, given the inherent risks, we cannot guarantee absolute
+                        security and consequently, we cannot ensure or warrant the security of any information
+                        you transmit to us and you do so at your own risk.
                     </p>
-                </div>
+                                    </div>
 
                 <div class="sub-pages-group">
                     <h3>
-                        Join Us
+                        Grievance / Data Protection Officer:
                     </h3>
                     <p>
-                        We invite you to become part of our story. Whether you’re looking to join a tournament, enjoy
-                        a casual game, or simply connect with fellow snooker enthusiasts, Q-Snooker is the place
-                        for you. Come and experience the warmth and camaraderie that have defined our club for
-                        years.
-                    </p>
-                    <p>
-                        Thank you for being a part of our journey. We look forward to welcoming you to Q-Snooker!
-                    </p>
-                    <p>
-                        For more information or to get in touch with us, please email <a
-                            href="mailto:info@q-snooker.com">info@q-snooker.com</a>
-                    </p>
+                        If you have any queries or concerns about the processing of your information that is
+                        available with us, you may email our Grievance Officer at Q Snooker, 2355 Mansfield Dr,
+                        email: james@amarachinvestments.com. We will address your concerns in accordance
+                        with applicable law.
+                    </p>               
                 </div>
 
             </div>
@@ -208,10 +213,14 @@
                     <h3>Links</h3>
                     <ul>
                         <li><a href="./">Home</a></li>
-                        <li><a href="privacy-policy"><i class="fa-solid fa-angles-right footer-arrow"></i>Privacy Policy</a></li>
-                        <li><a href="personal-information"><i class="fa-solid fa-angles-right footer-arrow"></i>Personal information Policy</a></li>
-                        <li><a href="return-refunds"><i class="fa-solid fa-angles-right footer-arrow"></i>Refunds and Returns Policy</a></li>
-                        <li><a href="terms-conditions"><i class="fa-solid fa-angles-right footer-arrow"></i>Terms & Conditions</a></li>
+                        <li><a href="privacy-policy"><i class="fa-solid fa-angles-right footer-arrow"></i>Privacy
+                                Policy</a></li>
+                        <li><a href="personal-information"><i class="fa-solid fa-angles-right footer-arrow"></i>Personal
+                                information Policy</a></li>
+                        <li><a href="return-refunds"><i class="fa-solid fa-angles-right footer-arrow"></i>Refunds and
+                                Returns Policy</a></li>
+                        <li><a href="terms-conditions"><i class="fa-solid fa-angles-right footer-arrow"></i>Terms &
+                                Conditions</a></li>
                     </ul>
                 </div>
             </div>
@@ -224,24 +233,6 @@
         </div>
     </footer>
     <!-- Footer End -->
-
-
-
-    <!-- Cookies Start -->
-    <!-- <div class="wrapper">
-        <div class="info">
-            <p>
-                This website uses cookies to give you the best possible experience of our websites. Cookies help us
-                provide social media features, analyze our traffic, and improve our services. By continuing to browse
-                our site, you agree to our use of cookies.
-            </p>
-        </div>
-        <div class="buttons">
-            <button class="button" id="acceptBtn">Accept Cookies</button>
-            <button class="button">Reject Cookies</button>
-        </div>
-    </div> -->
-    <!-- Cookies End-->
 
     <script src="assets/js/aos.js"></script>
     <script src="./assets/js/index.js"></script>
