--- a/about-us.html
+++ b/about-us.html
@@ -183,7 +183,7 @@
                 <div class="footer-links footer-items">
                     <h3>Links</h3>
                     <ul>
-                        <li><a href="./">Home</a></li>
+                        <li><a href="./"><i class="fa-solid fa-angles-right footer-arrow"></i>Home</a></li>
                         <li><a href="privacy-policy"><i class="fa-solid fa-angles-right footer-arrow"></i>Privacy Policy</a></li>
                         <li><a href="personal-information"><i class="fa-solid fa-angles-right footer-arrow"></i>Personal Information Policy</a></li>
                         <li><a href="return-refunds"><i class="fa-solid fa-angles-right footer-arrow"></i>Refunds and Returns Policy</a></li>
