--- a/tournaments-events.html
+++ b/tournaments-events.html
@@ -518,7 +518,7 @@
     <section class="help-us-section">
         <div class="container">
             <div class="help-us-wrapper">
-                <h2 class="section-heading">
+                <h2 class="section-heading pb-4">
                     Help Us Make Tournaments Great!
                 </h2>
                 <p>
@@ -540,7 +540,7 @@
     <!-- Tournament Help Us Section End -->
 
     <!--Tournament Page FAQ Section Start -->
-    <section class="pages-faq-section pb-5">
+    <section class="pages-faq-section">
         <div class="container">
             <div class="pages-accordion-wrapper">
                 <div class="accordion-wrap ">
@@ -755,21 +755,6 @@
         </div>
     </section>
     <!--Tournament Page FAQ Section End-->
-    <!-- accordion section start -->
-    <div class="accordion-sec ptb-50">
-        <div class="container">
-            <div class="site-heading">
-                <h2>
-                    FAQ’S
-                </h2>
-            </div>
-
-        </div>
-    </div>
-    <!-- accordion section end -->
-
-
-
 
     <!-- Disclaimer Section Start -->
     <section class="disclaimer py-5">
